fix: modify controllers and swagger to reflect api versioning
